[gd_scene load_steps=10 format=3 uid="uid://dbgo6fvjjcbh"]

[ext_resource type="Script" path="res://UI/Menu/ControlPanel.gd" id="1_c5qfs"]
[ext_resource type="Script" path="res://UI/Menu/SpeedSliderLabel.gd" id="2_1srts"]
[ext_resource type="Script" path="res://UI/Menu/AlgorithmSelector.gd" id="3_1gov2"]
[ext_resource type="Script" path="res://UI/Menu/HeuristicFunctionSelector.gd" id="4_lqrvh"]
[ext_resource type="Texture2D" uid="uid://3nmv0ik5hhua" path="res://Resources/Images/TX Props_.png" id="5_uh3jn"]
[ext_resource type="Texture2D" uid="uid://c7rwmnxoci7kb" path="res://Resources/Images/icons/remove(1).png" id="6_jfjfi"]

[sub_resource type="Theme" id="Theme_2axw1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_apo6v"]
atlas = ExtResource("5_uh3jn")
region = Rect2(288, 306, 32, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_0otps"]
atlas = ExtResource("5_uh3jn")
region = Rect2(68, 487, 24, 19)

[node name="ControlPanel" type="Control"]
layout_mode = 3
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 1255.0
grow_vertical = 2
scale = Vector2(1.00757, 1)
size_flags_horizontal = 8
size_flags_vertical = 4
script = ExtResource("1_c5qfs")

[node name="Menu" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -248.0
grow_horizontal = 0
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Menu"]
texture_filter = 1
layout_mode = 2
color = Color(0, 0, 0, 0.498039)

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
layout_mode = 2

[node name="Label" type="Label" parent="Menu/VBoxContainer"]
texture_filter = 3
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Меню
"
horizontal_alignment = 1
uppercase = true

[node name="HSeparator" type="HSeparator" parent="Menu/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
theme = SubResource("Theme_2axw1")

[node name="StartSearchButton" type="Button" parent="Menu/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Начать поиск"

[node name="ClearWallsButton" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Убрать стены
"

[node name="ClearPathButton" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Очистить путь
"

[node name="HAlgorithm" type="HBoxContainer" parent="Menu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label3" type="Label" parent="Menu/VBoxContainer/HAlgorithm"]
layout_mode = 2
text = "Алгоритм:
"
script = ExtResource("2_1srts")

[node name="AlgorithmSelector" type="OptionButton" parent="Menu/VBoxContainer/HAlgorithm"]
layout_mode = 2
script = ExtResource("3_1gov2")

[node name="HEuristicFunction" type="HBoxContainer" parent="Menu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label3" type="Label" parent="Menu/VBoxContainer/HEuristicFunction"]
layout_mode = 2
text = "Эвристическая функция:
"
script = ExtResource("2_1srts")

[node name="EuristicFunctionSelector" type="OptionButton" parent="Menu/VBoxContainer/HEuristicFunction"]
layout_mode = 2
script = ExtResource("4_lqrvh")

[node name="HVisualisationSpeed" type="HBoxContainer" parent="Menu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="HSlider" type="HSlider" parent="Menu/VBoxContainer/HVisualisationSpeed"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
min_value = 0.001
max_value = 0.1
step = 0.001
value = 0.001

[node name="Label2" type="Label" parent="Menu/VBoxContainer/HVisualisationSpeed"]
layout_mode = 2
text = "0.001
"
script = ExtResource("2_1srts")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -407.0
offset_top = -308.0
offset_right = -295.0
offset_bottom = -187.0
grow_horizontal = 0
grow_vertical = 2

[node name="ObjectPalette" type="ItemList" parent="MarginContainer"]
layout_mode = 2
allow_search = false
auto_height = true
item_count = 3
fixed_column_width = 100
item_0/text = "Стена"
item_0/icon = SubResource("AtlasTexture_apo6v")
item_1/text = "Преграда"
item_1/icon = SubResource("AtlasTexture_0otps")
item_2/text = "Удаление"
item_2/icon = ExtResource("6_jfjfi")

[connection signal="pressed" from="Menu/VBoxContainer/StartSearchButton" to="." method="_on_start_search_button_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/StartSearchButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/ClearWallsButton" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/ClearWallsButton" to="." method="_on_clear_walls_button_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/ClearPathButton" to="." method="_on_clear_path_button_pressed"]
[connection signal="item_selected" from="Menu/VBoxContainer/HAlgorithm/AlgorithmSelector" to="." method="_on_option_button_item_selected"]
[connection signal="item_selected" from="Menu/VBoxContainer/HAlgorithm/AlgorithmSelector" to="." method="_on_algorithm_selector_item_selected"]
[connection signal="item_selected" from="Menu/VBoxContainer/HAlgorithm/AlgorithmSelector" to="Menu/VBoxContainer/HEuristicFunction/EuristicFunctionSelector" method="_on_option_button_item_selected"]
[connection signal="item_selected" from="Menu/VBoxContainer/HEuristicFunction/EuristicFunctionSelector" to="." method="_on_euristic_function_selector_item_selected"]
[connection signal="value_changed" from="Menu/VBoxContainer/HVisualisationSpeed/HSlider" to="Menu/VBoxContainer/HVisualisationSpeed/Label2" method="_on_h_slider_value_changed"]
[connection signal="item_selected" from="MarginContainer/ObjectPalette" to="." method="_on_object_palette_item_selected"]
